fea: add move particles ,and changed sprites

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     width: 600px;
     height: 600px;
     transform: translate(-50%,-50%);
-    background: url('./assets/rio.png');
+    background: url('./assets/rio-claro.png');
 }
 
 canvas {
