--- a/style.css
+++ b/style.css
@@ -16,3 +16,36 @@ canvas {
     width: 100%;
     height: 100%;
 }
+#menu {
+    border: 2px solid grey;
+    box-shadow:initial;
+    top: 50%;
+    left: 50%;
+    position:absolute;
+    width: 600px;
+    height: 600px;
+    transform: translate(-50%,-50%);
+    background: url('./assets/general/title-screen2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+}
+
+#menu input{
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 40px;
+    position:absolute;
+    transform: translate(-50%,-50%);
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+    border-radius: 10px;
+}
+#menu input:hover{
+    background-color: rgba(5, 179, 5, 0.907);
+    color: black;
+}
