--- a/src/styles/gameOver.css
+++ b/src/styles/gameOver.css
@@ -37,6 +37,21 @@
     border-radius: 10px;
 }
 
+.game-over-background #highscore{
+    top: 90%;
+    left: 50%;
+    width: 100px;
+    height: 40px;
+    position:absolute;
+    transform: translate(-50%,-50%);
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
 .game-over-background .home{
     top: 50%;
     left: 50%;
